--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,33 @@ nav .mobile-nav .sidenav-trigger {
   color: #999;
 }
 
+.collapsed-view, .expanded-view {
+  position: absolute;
+  background-color: #999;
+  z-index: 5;
+  transition: 0.4s all ease-in-out;
+}
+.top-left {
+  top: 0;
+  left: 0;
+}
+.top-right {
+  top: 0;
+  right: 0;
+}
+.bottom-left {
+
+}
+.collapsed-view {
+  width: 0;
+  height: 0;
+}
+
+.expanded-view {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 992px) {
   .todo-app-container {
     flex-direction: column;
