styling task views

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -8,3 +8,5 @@ $focus-color-faded: rgba(239, 84, 82, 0.8);
 $goals-color-faded: rgba(3, 169, 244, 0.8);
 $fitin-color-faded: rgba(252, 174, 40, 0.8);
 $backburner-color-faded: rgba(23, 187, 163, 0.8);
+
+$color-offwhite: #efefef;
