--- a/src/scss/pages/_viewtasks.scss
+++ b/src/scss/pages/_viewtasks.scss
@@ -106,11 +106,15 @@ body,
   & .collapsed-view {
     width: 0;
     height: 0;
+    visibility: hidden;
+    opacity: 0;
   }
 
   & .expanded-view {
     width: 100%;
     height: 100%;
+    visibility: visible;
+    opacity: 1;
   }
 
   & .focus-view {
@@ -139,6 +143,38 @@ body,
 
     & .focus-container-tasks-circle {
       border-color: $focus-color-faded;
+    }
+
+    & .focus-view {
+
+      & .row .col.task-field-container {
+          display: inline-block;
+
+          & .validate {
+            border-bottom: 1px solid $color-offwhite;
+            color: $color-offwhite;
+            box-shadow: none;
+
+            &:focus {
+              border-bottom: 1px solid $color-offwhite;
+            }
+          }
+
+          & > label {
+            color: $color-offwhite;
+          }
+      }
+
+      & .close-task-menu {
+        display: block;
+        margin: 1rem auto;
+        background-color: $color-offwhite;
+
+        & .material-icons {
+          color: #666;
+        }
+
+      }
     }
   }
 
