finished add task functionality on mobile, finished styling on mobile, finished styling on edit and delete icon

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -27,4 +27,7 @@ $breakpoint arguement choices:
   @if $breakpoint == mobile {
     @media (max-width: 34.37em) { @content };
   }
+  @if $breakpoint == tiny {
+    @media (max-width: 21.25em) { @content };
+  }
 }
