--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,4 +9,6 @@ $goals-color-faded: rgba(3, 169, 244, 0.8);
 $fitin-color-faded: rgba(252, 174, 40, 0.8);
 $backburner-color-faded: rgba(23, 187, 163, 0.8);
 
+$addtask-radio-lightblue: rgba(3, 169, 244, 0.8);
+
 $color-offwhite: #efefef;
